upadted auth and job